# rust-stock

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
src/: main.rs  stock_fetcher_actor.rs  utils.rs
stock-stats/: Cargo.toml
stock-stats/benches/: stock_stats_benchmark.rs
stock-stats/src/: lib.rs
