[package]
name = "rust-stock"
version = "0.1.0"
authors = ["Van Den Berg, Sander(svandenberg) <svandenberg@ebay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {"version" = "1.1.5", features = ["blocking"]}
chrono = "0.4.18"
clap = "2.33.3"