[package]
authors = ["Sander <svdberg@me.com>"]
edition = "2018"
name = "rust-stock"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "3.0.0-beta.1"
yahoo_finance_api = "1.0.2"
async-std = {version = "1.9.0", features = ["attributes"]}
xactor = "0.7.11"
async-trait = "0.1.48"
