[package]
name = "stock-stats"
version = "0.1.0"
authors = ["Van Den Berg, Sander(svandenberg) <svandenberg@ebay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "stock_stats_benchmark"
harness = false

[dependencies]
yahoo_finance_api = "1.0.2"
chrono = { version = "0.4", features = ["serde"] }
async-std = { version = "1.7", features = ["unstable", "attributes"]}